--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "deploy": "vercel deploy",
     "deps": "run-s deps:*",
@@ -92,6 +93,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "next-sitemap": "^4.2.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "typescript": "^4.8.3"
